# spellbook

./: Cargo.toml  README.md  install.sh  spellbook.toml  spells.toml
src/: action.rs  app.rs  application.rs  config.rs  db.rs  desktop_entry.rs  entries_list.rs  event_reader.rs  filter_input.rs  icon.rs  icons.rs  input_reader.rs  keybind.rs  launcher.rs  launcher.toml  logger.rs  main.rs  message.rs  spellbook.rs  watcher.rs  worker.rs
src/widgets/: application_list.rs  counter.rs  debug.rs  divider.rs  info.rs  input.rs  mod.rs
