[package]
name = "spellbook"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "^0.29.0"
rust-ini = "^0.21.1"
ratatui = { version = "^0.29.0", features = ["serde"] }
serde = { version = "^1.0.219", features = ["derive"] }
toml = "^0.8.22"
phf = { version = "^0.11.3", features = ["macros"] }
nix = { version = "^0.30.1", features = ["inotify", "process", "signal"] }
chrono = "^0.4.41"
