[package]
name = "spellbook"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[dependencies]
crossterm = "0.29.0"
rust-ini = "0.21.3"
ratatui = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
phf = { version = "0.13.1", features = ["macros"] }
nix = { version = "0.30.1", features = ["inotify", "process"] }
