[package]
name = "spellbook"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

[dependencies]
crossterm = "0.29.0"
nix = { version = "0.30.1", features = ["inotify", "process"] }
phf = { version = "0.13.1", features = ["macros"] }
ratatui = { version = "0.30.0", features = ["serde"] }
rust-ini = "0.21.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
